# remoteram

examples/: dpdk.patch  nfb_vdev.c
python/: python-proto-command.sh  setup.py
python/remoteram/: ram.py
src/: CMakeLists.txt  remoteram.h  remoteram_server.cc
src/protobuf/: remoteram.proto
